--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script defer src="index.js"></script>
+    <script defer src="question1.js"></script>
+    <script defer src="question5.js"></script>
+    <script defer src="question6.js"></script>
     <title>Document</title>
   </head>
   <body>
