--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script defer src="question1.js"></script>
     <script defer src="question5.js"></script>
     <script defer src="question6.js"></script>
+    <script defer src="question8.js"></script>
     <title>Document</title>
   </head>
   <body>
