--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script defer src="question5.js"></script>
     <script defer src="question6.js"></script>
     <script defer src="question8.js"></script>
+    <script defer src="question9.js"></script>
+    <script defer src="question10.js"></script>
     <title>Document</title>
   </head>
   <body>
