--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script defer src="question8.js"></script>
     <script defer src="question9.js"></script>
     <script defer src="question10.js"></script>
+    <script defer src="question2.js"></script>
     <title>Document</title>
   </head>
   <body>
