--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script defer src="question9.js"></script>
     <script defer src="question10.js"></script>
     <script defer src="question2.js"></script>
+    <script defer src="question3.js"></script>
     <title>Document</title>
   </head>
   <body>
